force-app/main/default/objects/UserStats__c/UserStats__c.object-meta.xml
<CustomObject>
    <label>Statistiques utilisateur</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statistiques utilisateurs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>