force-app/main/default/objects/UserStats__c/fields/CAContratsCrees__c.field-meta.xml
<CustomField>
    <fullName>CAContratsCrees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CA des contrats créés (insérés)</description>
    <label>CA contrats créés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>