force-app/main/default/objects/UserStats__c/fields/CAContratsModifies__c.field-meta.xml
<CustomField>
    <fullName>CAContratsModifies__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CA des minorations et majorations des contrats</description>
    <label>CA contrats modifiés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>