force-app/main/default/objects/UserStats__c/fields/CADevisGeneres__c.field-meta.xml
<CustomField>
    <fullName>CADevisGeneres__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CA des devis passés à l&apos;état vendus</description>
    <label>CA devis générés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>