force-app/main/default/objects/UserStats__c/fields/CAGenere__c.field-meta.xml
<CustomField>
    <fullName>CAGenere__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CA généré</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>