force-app/main/default/objects/UserStats__c/fields/compteurAffectationProximite__c.field-meta.xml
<CustomField>
    <fullName>compteurAffectationProximite__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Affectation proximité)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>