force-app/main/default/objects/UserStats__c/fields/compteurAffectationProximitePlanning__c.field-meta.xml
<CustomField>
    <fullName>compteurAffectationProximitePlanning__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Affectat. proximité planning)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>