force-app/main/default/objects/UserStats__c/fields/compteurAtteinteObjectifs__c.field-meta.xml
<CustomField>
    <fullName>compteurAtteinteObjectifs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Atteinte des objectifs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>