force-app/main/default/objects/UserStats__c/fields/compteurCalendrierDashboard__c.field-meta.xml
<CustomField>
    <fullName>compteurCalendrierDashboard__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Débrief rapide)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>