force-app/main/default/objects/UserStats__c/fields/compteurCalendrierKparK__c.field-meta.xml
<CustomField>
    <fullName>compteurCalendrierKparK__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Calendrier K par K)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>