force-app/main/default/objects/UserStats__c/fields/compteurCalendrierMobile__c.field-meta.xml
<CustomField>
    <fullName>compteurCalendrierMobile__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Calendrier mobile)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>