force-app/main/default/objects/UserStats__c/fields/compteurCartographie__c.field-meta.xml
<CustomField>
    <fullName>compteurCartographie__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Cartographie)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>