force-app/main/default/objects/UserStats__c/fields/compteurConsultationListeDePhones__c.field-meta.xml
<CustomField>
    <fullName>compteurConsultationListeDePhones__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Consultation Liste de Phones)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>