force-app/main/default/objects/UserStats__c/fields/compteurFeuilleRoute__c.field-meta.xml
<CustomField>
    <fullName>compteurFeuilleRoute__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Feuille de route)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>