force-app/main/default/objects/UserStats__c/fields/compteurListePhones__c.field-meta.xml
<CustomField>
    <fullName>compteurListePhones__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Liste de phones)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>