force-app/main/default/objects/UserStats__c/fields/compteurObjectifVendeur__c.field-meta.xml
<CustomField>
    <fullName>compteurObjectifVendeur__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Objectif Vendeur)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>