force-app/main/default/objects/UserStats__c/fields/compteurPhototheque__c.field-meta.xml
<CustomField>
    <fullName>compteurPhototheque__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Photothèque)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>