force-app/main/default/objects/UserStats__c/fields/compteurProspection__c.field-meta.xml
<CustomField>
    <fullName>compteurProspection__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Prospection)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>