force-app/main/default/objects/UserStats__c/fields/compteurRechercheParProduits__c.field-meta.xml
<CustomField>
    <fullName>compteurRechercheParProduits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Recherche par Produits)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>