force-app/main/default/objects/UserStats__c/fields/compteurRecherchesChantiers__c.field-meta.xml
<CustomField>
    <fullName>compteurRecherchesChantiers__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Recherches Chantiers)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>