force-app/main/default/objects/UserStats__c/fields/compteurRecherchesComptes__c.field-meta.xml
<CustomField>
    <fullName>compteurRecherchesComptes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Recherches Comptes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>