force-app/main/default/objects/UserStats__c/fields/compteurRecherchesContrats__c.field-meta.xml
<CustomField>
    <fullName>compteurRecherchesContrats__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Recherches Contrats)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>