force-app/main/default/objects/UserStats__c/fields/compteurRecherchesDevis__c.field-meta.xml
<CustomField>
    <fullName>compteurRecherchesDevis__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Recherches Devis)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>