force-app/main/default/objects/UserStats__c/fields/compteurRecherchesProjets__c.field-meta.xml
<CustomField>
    <fullName>compteurRecherchesProjets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Recherches Projets)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>