force-app/main/default/objects/UserStats__c/fields/compteurTriptyqueAnalysePonctuelle__c.field-meta.xml
<CustomField>
    <fullName>compteurTriptyqueAnalysePonctuelle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Compteur (Triptyque Analyse Ponctuelle)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>