force-app/main/default/objects/UserStats__c/fields/dvoCADevisCrees__c.field-meta.xml
<CustomField>
    <fullName>dvoCADevisCrees__c</fullName>
    <label>CA TTC Devis créés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>