force-app/main/default/objects/UserStats__c/fields/dvoCADevisTransmis__c.field-meta.xml
<CustomField>
    <fullName>dvoCADevisTransmis__c</fullName>
    <label>CA TTC Devis Transmis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>