force-app/main/default/objects/UserStats__c/fields/dvoCADevisVendus__c.field-meta.xml
<CustomField>
    <fullName>dvoCADevisVendus__c</fullName>
    <label>CA TTC Devis Vendus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>