force-app/main/default/objects/UserStats__c/fields/dvoNbDevisCrees__c.field-meta.xml
<CustomField>
    <fullName>dvoNbDevisCrees__c</fullName>
    <label>Nb de devis créés</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>