force-app/main/default/objects/UserStats__c/fields/dvoNbDevisTransmis__c.field-meta.xml
<CustomField>
    <fullName>dvoNbDevisTransmis__c</fullName>
    <label>Nb de devis transmis</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>