force-app/main/default/objects/UserStats__c/fields/dvoNbDevisVendus__c.field-meta.xml
<CustomField>
    <fullName>dvoNbDevisVendus__c</fullName>
    <label>Nb de devis vendus</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>