force-app/main/default/objects/UserStats__c/fields/dvoNbExportDevis__c.field-meta.xml
<CustomField>
    <fullName>dvoNbExportDevis__c</fullName>
    <label>Nb de devis exportés dans Kube</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>