force-app/main/default/objects/UserStats__c/fields/dvoNbImportRef__c.field-meta.xml
<CustomField>
    <fullName>dvoNbImportRef__c</fullName>
    <label>Nombre d&apos;import du référentiel</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>