force-app/main/default/objects/UserStats__c/fields/dvoVersionAppli__c.field-meta.xml
<CustomField>
    <fullName>dvoVersionAppli__c</fullName>
    <label>Version de l&apos;application</label>
    <length>40</length>
    <type>Text</type>
</CustomField>