force-app/main/default/objects/UserStats__c/fields/dvoVersionRef__c.field-meta.xml
<CustomField>
    <fullName>dvoVersionRef__c</fullName>
    <label>Version du référentiel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>