force-app/main/default/objects/UserStats__c/fields/GDPR_dateExpiration__c.field-meta.xml
<CustomField>
    <fullName>GDPR_dateExpiration__c</fullName>
    <description>Date (excluse) à partir de laquelle l’enregistrement doit être supprimer</description>
    <label>Date expiration (GDPR)</label>
    <type>Date</type>
</CustomField>