force-app/main/default/objects/UserStats__c/fields/historiqueRequetes__c.field-meta.xml
<CustomField>
    <fullName>historiqueRequetes__c</fullName>
    <label>Historique des requêtes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>