force-app/main/default/objects/UserStats__c/fields/nbComptesExportes__c.field-meta.xml
<CustomField>
    <fullName>nbComptesExportes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de comptes exportés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>