force-app/main/default/objects/UserStats__c/fields/nbComptesRetournes__c.field-meta.xml
<CustomField>
    <fullName>nbComptesRetournes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de comptes retournés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>