force-app/main/default/objects/UserStats__c/fields/nbExportsEffectues__c.field-meta.xml
<CustomField>
    <fullName>nbExportsEffectues__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre d’exports effectués</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>