force-app/main/default/objects/UserStats__c/fields/nbRecherchesEffectuees__c.field-meta.xml
<CustomField>
    <fullName>nbRecherchesEffectuees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de recherches effectuées</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>