force-app/main/default/objects/UserStats__c/fields/nombreDevis__c.field-meta.xml
<CustomField>
    <fullName>nombreDevis__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de devis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>