force-app/main/default/objects/UserStats__c/fields/nombreProjets__c.field-meta.xml
<CustomField>
    <fullName>nombreProjets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de projets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>