force-app/main/default/objects/UserStats__c/fields/nombreProjetsCall__c.field-meta.xml
<CustomField>
    <fullName>nombreProjetsCall__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de projets (Call)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>