force-app/main/default/objects/UserStats__c/fields/nombreR1Effectues__c.field-meta.xml
<CustomField>
    <fullName>nombreR1Effectues__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de R1 effectués</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>