force-app/main/default/objects/UserStats__c/fields/nombreRDVEffectues__c.field-meta.xml
<CustomField>
    <fullName>nombreRDVEffectues__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de RDV effectués</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>