force-app/main/default/objects/UserStats__c/fields/totalCompteursAutres__c.field-meta.xml
<CustomField>
    <fullName>totalCompteursAutres__c</fullName>
    <formula>compteurAffectationProximite__c +
compteurAffectationProximitePlanning__c +
compteurCalendrierKparK__c +
compteurListePhones__c +
compteurPhototheque__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Autres fonctionnalités)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>