force-app/main/default/objects/UserStats__c/fields/totalCompteursCartographie__c.field-meta.xml
<CustomField>
    <fullName>totalCompteursCartographie__c</fullName>
    <formula>compteurCartographie__c +  compteurFeuilleRoute__c +  compteurRechercheParProduits__c + compteurStreetView__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Cartographie)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>