force-app/main/default/objects/UserStats__c/fields/totalCompteursRecherche__c.field-meta.xml
<CustomField>
    <fullName>totalCompteursRecherche__c</fullName>
    <formula>compteurRecherchesChantiers__c + 
compteurRecherchesComptes__c + 
compteurRecherchesContrats__c +
compteurRecherchesDevis__c +
compteurRecherchesProjets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Recherches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>