force-app/main/default/objects/UserStats__c/fields/totalCompteursSalesforce1__c.field-meta.xml
<CustomField>
    <fullName>totalCompteursSalesforce1__c</fullName>
    <formula>compteurAtteinteObjectifs__c +  compteurCalendrierMobile__c + compteurCalendrierDashboard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Salesforce1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>