force-app/main/default/objects/UserStats__c/fields/totalCompteursTous__c.field-meta.xml
<CustomField>
    <fullName>totalCompteursTous__c</fullName>
    <formula>compteurAffectationProximite__c +
 compteurAffectationProximitePlanning__c +
 compteurAtteinteObjectifs__c +
 compteurCalendrierKparK__c +
 compteurCalendrierMobile__c +
 compteurCalendrierDashboard__c +
 compteurCartographie__c +
 compteurFeuilleRoute__c +
 compteurListePhones__c +
 compteurObjectifVendeur__c +
 compteurPhototheque__c +
 compteurProspection__c +
 compteurRechercheParProduits__c +
 compteurRecherchesChantiers__c +
 compteurRecherchesComptes__c +
 compteurRecherchesContrats__c +
 compteurRecherchesDevis__c +
 compteurRecherchesProjets__c +
 compteurStreetView__c +
 compteurTriptyque__c +
 compteurTriptyqueAnalysePonctuelle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Tous compteurs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>