force-app/main/default/objects/UserStats__c/fields/totalCompteursTryptique__c.field-meta.xml
<CustomField>
    <fullName>totalCompteursTryptique__c</fullName>
    <formula>compteurObjectifVendeur__c +  compteurTriptyque__c +  compteurTriptyqueAnalysePonctuelle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Tryptique)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>