force-app/main/default/objects/UserStats__c/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisateur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Statistiques_Utilisateurs</relationshipName>
    <type>Lookup</type>
</CustomField>